# src/controllers/department.js
@@ -7,6 +7,19 @@ const Personnel = require("../models/personnel");
 
 module.exports = {
   list: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'List Departments'
+        #swagger.description = `
+            You can send query with endpoint for filter[], search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+    */
     //! data
     const data = await res.getModelList(Department);
 
@@ -19,6 +32,17 @@ module.exports = {
   },
 
   create: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Create Department'
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                $ref: '#/definitions/Department'
+            }
+        }
+    */
     const data = await Department.create(req.body);
     res.status(201).send({
       error: false,
@@ -27,6 +51,10 @@ module.exports = {
   },
 
   read: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Read Single Department'
+    */
     const data = await Department.findOne({ _id: req.params.id });
 
     res.status(200).send({
@@ -36,6 +64,17 @@ module.exports = {
   },
 
   update: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Update Department'
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                $ref: '#/definitions/Department'
+            }
+        }
+    */
     //! Does it perform update validation by default?
     const data = await Department.updateOne({ _id: req.params.id }, req.body, {
       runValidators: true,
@@ -49,6 +88,10 @@ module.exports = {
   },
 
   delete: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Delete Department'
+    */
     const data = await Department.deleteOne({ _id: req.params.id });
     res.status(data.deletedCount ? 204 : 404).send({
       error: !data.deletedCount,
